--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Constructora e Inmobiliaria Santander</title>
+  <title>Constructora & Inmobiliaria Santander</title>
   <link rel="stylesheet" href="styles.css">
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -11,7 +11,7 @@
 <body>
   <header>
     <img src="img/B.jpg" alt="Logo Constructora Santander" class="logo">
-    <h1>Constructora e Inmobiliaria Santander</h1>
+    <h1>Constructora & Inmobiliaria Santander</h1>
     <nav>
       <a href="#inicio">Inicio</a>
       <a href="#servicios">Servicios</a>
@@ -22,8 +22,15 @@
 
   <section id="inicio" class="hero">
     <div class="overlay">
-      <h2>Tu futuro comienza con una buena inversión</h2>
-      <p>Compra, venta y construcción de casas y lotes con calidad y confianza.</p>
+      <h2>¿QUIENES SOMOS?</h2>
+      <p>Constructora & Inmobiliaria Santander es una empresa con más de 10 años de experiencia dedicada a la compra
+        y venta de lotes, construcción de viviendas y asesoría inmobiliaria personalizada.
+        Nos destacamos por ofrecer proyectos de vivienda modernos, funcionales y adaptados a las necesidades de cada cliente, 
+        garantizando siempre calidad, confianza y cumplimiento en cada obra.
+        Contamos con un equipo de profesionales comprometidos con hacer realidad tus sueños, brindando soluciones personalizadas 
+        desde el diseño hasta la entrega final.
+        Nuestra prioridad es que cada cliente encuentre con nosotros una inversión segura y una experiencia de construcción transparente,
+         honesta y satisfactoria.</p>
     </div>
   </section>
 
@@ -105,13 +112,13 @@
       <a href="https://wa.me/573167870085" target="_blank" class="whatsapp">
         <i class="fab fa-whatsapp"></i>
       </a>
-      <a href="https://www.facebook.com/ContruSantander" target="_blank" class="facebook">
+      <a href="https://www.facebook.com/contruSantander" target="_blank" class="facebook">
         <i class="fab fa-facebook-f"></i>
       </a>
-      <a href="https://www.instagram.com/ContruSantander" target="_blank" class="instagram">
+      <a href="https://www.instagram.com/contrusanta00" target="_blank" class="instagram">
         <i class="fab fa-instagram"></i>
       </a>
-      <a href="mailto:contrusanta@gmail.com" target="_blank" class="gmail">
+      <a href="mailto:contrusantander0@gmail.com" target="_blank" class="gmail">
         <i class="fas fa-envelope"></i>
       </a>
     </div>
