--- a/index.html
+++ b/index.html
@@ -66,35 +66,35 @@
 
       <!-- CASA MODERNA ESQUINERA -->
       <div class="proyecto" onclick="abrirGaleria('CASA MODERNA ESQUINERA')">
+        <h3>CASA MODERNA ESQUINERA</h3>
         <img src="C0.jpg" alt="Casa Moderna Esquinera">
         <img src="C01.jpg" alt="Casa Moderna Esquinera">
         <img src="C8.jpg" alt="Casa Moderna Esquinera">
-        <img src="iC7.jpg" alt="Casa Moderna Esquinera">
+        <img src="C7.jpg" alt="Casa Moderna Esquinera">
         <img src="C5.jpg" alt="Casa Moderna Esquinera">
         <img src="C2.jpg" alt="Casa Moderna Esquinera">
-        <h3>CASA MODERNA ESQUINERA</h3>
       </div>
 
       <!-- CASA MODERNA CON JACUZZI -->
       <div class="proyecto" onclick="abrirGaleria('CASA MODERNA CON JACUZZI EN EL PATIO')">
+        <h3>CASA MODERNA CON JACUZZI EN EL PATIO</h3>
         <img src="S1.jpg" alt="Casa Moderna con Jacuzzi en el Patio">
         <img src="S2.jpg" alt="Casa Moderna con Jacuzzi en el Patio">
         <img src="S3.jpg" alt="Casa Moderna con Jacuzzi en el Patio">
         <img src="S4.jpg" alt="Casa Moderna con Jacuzzi en el Patio">
         <img src="S5.jpg" alt="Casa Moderna con Jacuzzi en el Patio">
         <img src="S6.jpg" alt="Casa Moderna con Jacuzzi en el Patio">
-        <h3>CASA MODERNA CON JACUZZI EN EL PATIO</h3>
       </div>
 
       <!-- CASA MODERNA DE DOS PISOS -->
       <div class="proyecto" onclick="abrirGaleria('CASA MODERNA DE DOS PISOS')">
+        <h3>CASA MODERNA DE DOS PISOS</h3>
         <img src="Z1.jpg" alt="Casa Moderna de Dos Pisos">
         <img src="Z2.jpg" alt="Casa Moderna de Dos Pisos">
         <img src="Z3.jpg" alt="Casa Moderna de Dos Pisos">
         <img src="Z4.jpg" alt="Casa Moderna de Dos Pisos">
         <img src="R6.jpg" alt="Casa Moderna de Dos Pisos">
         <img src="Q8.jpg" alt="Casa Moderna de Dos Pisos">
-        <h3>CASA MODERNA DE DOS PISOS</h3>
       </div>
 
     </div>
@@ -185,5 +185,6 @@
   </script>
 </body>
 </html>
+
 
 
