--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@
       <a href="https://wa.me/573167870085" target="_blank" class="whatsapp">
         <i class="fab fa-whatsapp"></i>
       </a>
-      <a href="https://www.facebook.com/contruSantander" target="_blank" class="facebook">
+      <a href="https://www.facebook.com/share/1CeErGix45/?mibextid=wwXIfr" target="_blank" class="facebook">
         <i class="fab fa-facebook-f"></i>
       </a>
-      <a href="https://www.instagram.com/contrusanta00" target="_blank" class="instagram">
+      <a href="https://www.instagram.com/construsanta00?igsh=MTFpbWZhODlsYmRsOA==&utm_source=ig_contact_invite" target="_blank" class="instagram">
         <i class="fab fa-instagram"></i>
       </a>
       <a href="mailto:contrusantander0@gmail.com" target="_blank" class="gmail">
@@ -185,6 +185,7 @@
   </script>
 </body>
 </html>
+
 
 
 
