--- a/index.html
+++ b/index.html
@@ -108,6 +108,18 @@
         <img src="R6.jpg" alt="Casa Moderna de Dos Pisos">
         <img src="Q8.jpg" alt="Casa Moderna de Dos Pisos">
       </div>
+        <!-- CASA A GUSTO DE LOS CLIENTES -->
+      <div class="proyecto" onclick="abrirGaleria('CASA A GUSTO DE LOS CLIENTES ')">
+        <h3>CASA MODERNA CON JACUZZI EN EL PATIO</h3>
+        <img src="l00.jpg" alt="CASA A GUSTO DE LOS CLIENTES">
+        <img src="l0.jpg" alt="CASA A GUSTO DE LOS CLIENTES">
+        <img src="l1.jpg" alt="CASA A GUSTO DE LOS CLIENTES">
+        <img src="l2.jpg" alt="CASA A GUSTO DE LOS CLIENTES">
+        <img src="l3.jpg" alt="CASA A GUSTO DE LOS CLIENTES">
+        <img src="l4.jpg" alt="CASA A GUSTO DE LOS CLIENTES">
+        <img src="l5.jpg" alt="CASA A GUSTO DE LOS CLIENTES">
+        <img src="l6.jpg" alt="CASA A GUSTO DE LOS CLIENTES">
+      </div>
     </div>
   </section>
 
@@ -202,6 +214,8 @@
         imagenes = ["S1.jpg", "S2.jpg", "S3.jpg", "S4.jpg", "S5.jpg", "S6.jpg"];
       } else if (proyecto === "CASA MODERNA DE DOS PISOS") {
         imagenes = ["Z1.jpg", "Q5.jpg", "Z2.jpg", "Z3.jpg", "Z4.jpg", "R6.jpg", "Q8.jpg"];
+        else if (proyecto === "CASA A GUSTO DE LOS CLIENTES") {
+        imagenes = ["l00.jpg","l0.jpg", "l1.jpg", "l2.jpg", "l3.jpg", "l4.jpg", "l5.jpg", "l6.jpg"];
       }
 
       imagenes.forEach(src => {
@@ -219,6 +233,7 @@
   </script>
 </body>
 </html>
+
 
 
 
