--- a/index.html
+++ b/index.html
@@ -85,6 +85,14 @@
         <img src="C2.jpg" alt="Casa Moderna Esquinera">
         <img src="Q8,1.jpg" alt="Casa Moderna Esquinera">
       </div>
+       <!-- CASA CON LOS DISEÑOS MAS MODERNOS -->
+      <div class="proyecto" onclick="abrirGaleria('CASA CON LOS DISEÑOS MAS MODERNOS')">
+        <h3>CASA CON LOS DISEÑOS MAS MODERNOS</h3>
+        <img src="y1.jpg" alt="CASA CON LOS DISEÑOS MAS MODERNOS">
+        <img src="y2.jpg" alt="CASA CON LOS DISEÑOS MAS MODERNOS">
+        <img src="y3.jpg" alt="CASA CON LOS DISEÑOS MAS MODERNOS">
+        <img src="y4.jpg" alt="CASA CON LOS DISEÑOS MAS MODERNOS">
+      </div>
 
       <!-- CASA MODERNA CON JACUZZI -->
       <div class="proyecto" onclick="abrirGaleria('CASA MODERNA CON JACUZZI EN EL PATIO')">
@@ -209,6 +217,8 @@
 
       if (proyecto === "CASA MODERNA ESQUINERA") {
         imagenes = ["C0.jpg", "C01.jpg", "C8.jpg", "C7.jpg", "C5.jpg", "C2.jpg", "Q8,1.jpg"];
+        else if (proyecto === "CASA CON LOS DISEÑOS MAS MODERNOS") {
+        imagenes = ["y1.jpg","y2.jpg", "y3.jpg", "y4.jpg"];
       } else if (proyecto === "CASA MODERNA CON JACUZZI EN EL PATIO") {
         imagenes = ["S1.jpg", "S2.jpg", "S3.jpg", "S4.jpg", "S5.jpg", "S6.jpg"];
       } else if (proyecto === "CASA MODERNA DE DOS PISOS") {
@@ -232,6 +242,7 @@
   </script>
 </body>
 </html>
+
 
 
 
