--- a/index.html
+++ b/index.html
@@ -32,7 +32,16 @@
       </p>
     </div>
   </section>
-
+  
+<!-- BUSCADOR -->
+<section id="buscador" class="buscador">
+  <input 
+    type="text" 
+    id="searchInput" 
+    placeholder="🔍 Buscar servicios o proyectos..." 
+    onkeyup="filtrarContenido()">
+</section>
+  
   <!-- SERVICIOS -->
   <section id="servicios" class="light">
     <h2>Nuestros Servicios</h2>
@@ -225,5 +234,6 @@
   </script>
 </body>
 </html>
+
 
 
