--- a/index.html
+++ b/index.html
@@ -10,13 +10,17 @@
 </head>
 <body>
   <header>
+  <div class="header-container">
     <img src="J.SS.jpg" alt="Logo Constructora Santander" class="logo">
     <h1>INMOBILIARIA & CONSTRUCTORA J.S</h1>
     <nav>
-      <a href="#inicio">Inicio</a>
+      <a href="#inicio" class="activo">Inicio</a>
       <a href="#servicios">Servicios</a>
       <a href="#proyectos">Proyectos</a>
       <a href="#contacto">Contacto</a>
+    </nav>
+  </div>
+</header>
       <!-- BUSCADOR -->
 <section id="buscador" class="buscador">
   <input 
@@ -234,6 +238,7 @@
   </script>
 </body>
 </html>
+
 
 
 
