--- a/index.html
+++ b/index.html
@@ -69,25 +69,27 @@
       <a href="#inicio">Inicio ▾</a>
       <ul class="submenu">
         <li><a href="#nosotros">Quiénes somos</a></li>
-        <li><a href="#mision">Misión</a></li>
-        <li><a href="#vision">Visión</a></li>
       </ul>
     </li>
 
     <li>
       <a href="#servicios">Servicios ▾</a>
       <ul class="submenu">
-        <li><a href="#obras">Obras Civiles</a></li>
-        <li><a href="#remodelaciones">Remodelaciones</a></li>
-        <li><a href="#arquitectura">Diseño Arquitectónico</a></li>
+        <li><a href="#Venta de casa y lotes">Venta de Casa y Lotes/a></li>
+        <li><a href="#Construccion Personalizada">Construccion Personalizada"</a></li>
+        <li><a href="#Diseño Arquitectonico">Diseño Arquitectónico</a></li>
+        <li><a href="#Asesoria Inmobiliaria">Asesoria Inmobiliaria</a></li>
       </ul>
     </li>
 
     <li>
       <a href="#proyectos">Proyectos ▾</a>
       <ul class="submenu">
-        <li><a href="#actuales">Proyectos Actuales</a></li>
-        <li><a href="#finalizados">Proyectos Finalizados</a></li>
+        <li><a href="#Casa Esquinera">Casa Esquinera</a></li>
+        <li><a href="#Casa Moderna">Casa Moderna</a></li>
+        <li><a href="#Casa Con Jacuzzi">Casa Con Jacuzzi/a></li>
+        <li><a href="#Casa dos pisos">Casa dos pisos</a></li>
+        <li><a href="#Casa Personalizada">Casa Personalizada</a></li>
       </ul>
     </li>
 
@@ -301,4 +303,5 @@
   </script>
 </body>
 </html>
+
 
