--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <ul class="submenu">
         <li><a href="#Casa Esquinera">Casa Esquinera</a></li>
         <li><a href="#Casa Moderna">Casa Moderna</a></li>
-        <li><a href="#Casa Con Jacuzzi">Casa Con Jacuzzi/a></li>
+        <li><a href="#Casa Con Jacuzzi">Casa Con Jacuzzi</a></li>
         <li><a href="#Casa dos pisos">Casa dos pisos</a></li>
         <li><a href="#Casa Personalizada">Casa Personalizada</a></li>
       </ul>
@@ -303,6 +303,7 @@
   </script>
 </body>
 </html>
+
 
 
 
