--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <a href="#servicios">Servicios ▾</a>
       <ul class="submenu">
         <li><a href="#Venta de casa y lotes">Venta de Casa y Lotes/a></li>
-        <li><a href="#Construccion Personalizada">Construccion Personalizada"</a></li>
+        <li><a href="#Construccion Personalizada">Construccion Personalizada</a></li>
         <li><a href="#Diseño Arquitectonico">Diseño Arquitectónico</a></li>
         <li><a href="#Asesoria Inmobiliaria">Asesoria Inmobiliaria</a></li>
       </ul>
@@ -303,6 +303,7 @@
   </script>
 </body>
 </html>
+
 
 
 
