--- a/index.html
+++ b/index.html
@@ -61,49 +61,48 @@
 </head>
 <body>
   <header>
-    <img src="J.SS.jpg" alt="Logo Constructora Santander" class="logo">
-    <h1>INMOBILIARIA & CONSTRUCTORA J.S</h1>
-    <nav id="filtroMenu">
-  <ul class="menu">
-    <li>
-      <a href="#inicio">Inicio ▾</a>
-      <ul class="submenu">
-        <li><a href="#nosotros">Quiénes somos</a></li>
-      </ul>
-    </li>
+  <img src="img/logo.png" alt="Logo JS" class="logo">
+  <h1>INMOBILIARIA & CONSTRUCTORA J.S</h1>
+  <nav>
+    <ul class="menu">
+      <li class="dropdown">
+        <a href="#inicio">Inicio</a>
+        <ul class="submenu">
+          <li><a href="#quienes">Quiénes somos</a></li>
+        </ul>
+      </li>
 
-    <li>
-      <a href="#servicios">Servicios ▾</a>
-      <ul class="submenu">
-        <li><a href="#Venta de casa y lotes">Venta de Casa y Lotes/a></li>
-        <li><a href="#Construccion Personalizada">Construccion Personalizada</a></li>
-        <li><a href="#Diseño Arquitectonico">Diseño Arquitectónico</a></li>
-        <li><a href="#Asesoria Inmobiliaria">Asesoria Inmobiliaria</a></li>
-      </ul>
-    </li>
+      <li class="dropdown">
+        <a href="#servicios">Servicios</a>
+        <ul class="submenu">
+          <li><a href="#venta">Venta de Casas y Lotes</a></li>
+          <li><a href="#construccion">Construcción Personalizada</a></li>
+          <li><a href="#diseno">Diseño Arquitectónico</a></li>
+          <li><a href="#asesoria">Asesoría Inmobiliaria</a></li>
+        </ul>
+      </li>
 
-    <li>
-      <a href="#proyectos">Proyectos ▾</a>
-      <ul class="submenu">
-        <li><a href="#Casa Esquinera">Casa Esquinera</a></li>
-        <li><a href="#Casa Moderna">Casa Moderna</a></li>
-        <li><a href="#Casa Con Jacuzzi">Casa Con Jacuzzi</a></li>
-        <li><a href="#Casa dos pisos">Casa dos pisos</a></li>
-        <li><a href="#Casa Personalizada">Casa Personalizada</a></li>
-      </ul>
-    </li>
+      <li class="dropdown">
+        <a href="#proyectos">Proyectos</a>
+        <ul class="submenu">
+          <li><a href="#esquinera">Casa Esquinera</a></li>
+          <li><a href="#moderna">Casa Moderna</a></li>
+          <li><a href="#jacuzzi">Casa con Jacuzzi</a></li>
+          <li><a href="#personalizada">Casa Personalizada</a></li>
+        </ul>
+      </li>
 
-    <li>
-      <a href="#contacto">Contacto ▾</a>
-      <ul class="submenu">
-        <li><a href="#whatsapp">WhatsApp</a></li>
-        <li><a href="#correo">Correo Electrónico</a></li>
-        <li><a href="#ubicacion">Ubicación</a></li>
-      </ul>
-    </li>
-  </ul>
-</nav>
-  </header>
+      <li class="dropdown">
+        <a href="#contacto">Contacto</a>
+        <ul class="submenu">
+          <li><a href="https://wa.me/">WhatsApp</a></li>
+          <li><a href="mailto:">Correo Electrónico</a></li>
+          <li><a href="#ubicacion">Ubicación</a></li>
+        </ul>
+      </li>
+    </ul>
+  </nav>
+</header>
 
   <!-- QUIÉNES SOMOS -->
   <section id="inicio" class="hero">
@@ -303,6 +302,7 @@
   </script>
 </body>
 </html>
+
 
 
 
