--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 </head>
 <body>
   <header>
-  <img src="img/logo.png" alt="Logo JS" class="logo">
+  <img src="J.SS.jpg" alt="Logo JS" class="logo">
   <h1>INMOBILIARIA & CONSTRUCTORA J.S</h1>
   <nav>
     <ul class="menu">
@@ -302,6 +302,7 @@
   </script>
 </body>
 </html>
+
 
 
 
