--- a/index.html
+++ b/index.html
@@ -42,14 +42,36 @@
       </li>
 
       <li class="dropdown">
-        <a href="#contacto">Contacto</a>
-        <ul class="submenu">
-          <li><a href="https://wa.me/573167870085" target="_blank" class="whatsapp"><i class="fab fa-whatsapp"></i></a></a></li>
-          <li><a href="https://web.facebook.com/profile.php?id=61583404332951" target="_blank" class="facebook"><i class="fab fa-facebook-f"></i>a><li>
-          <li><a href="https://www.instagram.com/construsanta00?igsh=MTFpbWZhODlsYmRsOA==&utm_source=ig_contact_invite" target="_blank" class="instagram"><i class="fab fa-instagram"></a><li>
-          <li><a href="mailto:contrusantander0@gmail.com" target="_blank" class="gmail"><i class="fas fa-envelope"></i></a></li>
-        </ul>
-      </li>
+  <a href="#contacto">Contacto</a>
+  <ul class="submenu">
+
+    <li>
+      <a href="https://wa.me/573167870085" target="_blank" class="whatsapp">
+        <i class="fab fa-whatsapp"></i> WhatsApp
+      </a>
+    </li>
+
+    <li>
+      <a href="https://web.facebook.com/profile.php?id=61583404332951" target="_blank" class="facebook">
+        <i class="fab fa-facebook-f"></i> Facebook
+      </a>
+    </li>
+
+    <li>
+      <a href="https://www.instagram.com/construsanta00?igsh=MTFpbWZhODlsYmRsOA==&utm_source=ig_contact_invite" target="_blank" class="instagram">
+        <i class="fab fa-instagram"></i> Instagram
+      </a>
+    </li>
+
+    <li>
+      <a href="mailto:contrusantander0@gmail.com" target="_blank" class="gmail">
+        <i class="fas fa-envelope"></i> Correo Electrónico
+      </a>
+    </li>
+
+  </ul>
+</li>
+
     </ul>
   </nav>
 </header>
@@ -258,6 +280,7 @@
   </script>
 </body>
 </html>
+
 
 
 
