--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
 
       <li class="dropdown">
         <a href="#servicios">Servicios</a>
+        <!-- ANCLAS PARA SUBMENÚ DE SERVICIOS -->
+<div id="venta"></div>
+<div id="construccion"></div>
+<div id="diseno"></div>
+<div id="asesoria"></div>
         <ul class="submenu">
           <li><a href="#venta">Venta de Casas y Lotes</a></li>
           <li><a href="#construccion">Construcción Personalizada</a></li>
@@ -33,6 +38,11 @@
 
       <li class="dropdown">
         <a href="#proyectos">Proyectos</a>
+          <!-- ANCLAS PARA SUBMENÚ DE PROYECTOS -->
+<div id="esquinera"></div>
+<div id="moderna"></div>
+<div id="jacuzzi"></div>
+<div id="personalizada"></div>
         <ul class="submenu">
           <li><a href="#esquinera">Casa Esquinera</a></li>
           <li><a href="#moderna">Casa Moderna</a></li>
@@ -280,6 +290,7 @@
   </script>
 </body>
 </html>
+
 
 
 
