--- a/index.html
+++ b/index.html
@@ -13,76 +13,68 @@
   <img src="J.SS.jpg" alt="Logo Constructora Santander" class="logo">
   <h1>INMOBILIARIA & CONSTRUCTORA J.S</h1>
   <nav>
-    <ul class="menu">
-      <li class="dropdown">
-        <a href="#inicio">Inicio</a>
-        <ul class="submenu">
-          <li><a href="#quienes">Quiénes somos</a></li>
-        </ul>
-      </li>
+  <ul class="menu">
 
-      <li class="dropdown">
-        <a href="#servicios">Servicios</a>
-        <!-- ANCLAS PARA SUBMENÚ DE SERVICIOS -->
-<div id="venta"></div>
-<div id="construccion"></div>
-<div id="diseno"></div>
-<div id="asesoria"></div>
-        <ul class="submenu">
-          <li><a href="#venta">Venta de Casas y Lotes</a></li>
-          <li><a href="#construccion">Construcción Personalizada</a></li>
-          <li><a href="#diseno">Diseño Arquitectónico</a></li>
-          <li><a href="#asesoria">Asesoría Inmobiliaria</a></li>
-        </ul>
-      </li>
-
-      <li class="dropdown">
-        <a href="#proyectos">Proyectos</a>
-          <!-- ANCLAS PARA SUBMENÚ DE PROYECTOS -->
-<div id="esquinera"></div>
-<div id="moderna"></div>
-<div id="jacuzzi"></div>
-<div id="personalizada"></div>
-        <ul class="submenu">
-          <li><a href="#esquinera">Casa Esquinera</a></li>
-          <li><a href="#moderna">Casa Moderna</a></li>
-          <li><a href="#jacuzzi">Casa con Jacuzzi</a></li>
-          <li><a href="#personalizada">Casa Personalizada</a></li>
-        </ul>
-      </li>
-
-      <li class="dropdown">
-  <a href="#contacto">Contacto</a>
-  <ul class="submenu">
-
-    <li>
-      <a href="https://wa.me/573167870085" target="_blank" class="whatsapp">
-        <i class="fab fa-whatsapp"></i> WhatsApp
-      </a>
+    <li class="dropdown">
+      <a href="#inicio">Inicio</a>
+      <ul class="submenu">
+        <li><a href="#quienes">Quiénes somos</a></li>
+      </ul>
     </li>
 
-    <li>
-      <a href="https://web.facebook.com/profile.php?id=61583404332951" target="_blank" class="facebook">
-        <i class="fab fa-facebook-f"></i> Facebook
-      </a>
+    <li class="dropdown">
+      <a href="#servicios">Servicios</a>
+      <ul class="submenu">
+        <li><a href="#venta">Venta de Casas y Lotes</a></li>
+        <li><a href="#construccion">Construcción Personalizada</a></li>
+        <li><a href="#diseno">Diseño Arquitectónico</a></li>
+        <li><a href="#asesoria">Asesoría Inmobiliaria</a></li>
+      </ul>
     </li>
 
-    <li>
-      <a href="https://www.instagram.com/construsanta00?igsh=MTFpbWZhODlsYmRsOA==&utm_source=ig_contact_invite" target="_blank" class="instagram">
-        <i class="fab fa-instagram"></i> Instagram
-      </a>
+    <li class="dropdown">
+      <a href="#proyectos">Proyectos</a>
+      <ul class="submenu">
+        <li><a href="#esquinera">Casa Esquinera</a></li>
+        <li><a href="#moderna">Casa Moderna</a></li>
+        <li><a href="#jacuzzi">Casa con Jacuzzi</a></li>
+        <li><a href="#personalizada">Casa Personalizada</a></li>
+      </ul>
     </li>
 
-    <li>
-      <a href="mailto:contrusantander0@gmail.com" target="_blank" class="gmail">
-        <i class="fas fa-envelope"></i> Correo Electrónico
-      </a>
+    <li class="dropdown">
+      <a href="#contacto">Contacto</a>
+      <ul class="submenu">
+
+        <li>
+          <a href="https://wa.me/573167870085" target="_blank" class="whatsapp">
+            <i class="fab fa-whatsapp"></i> WhatsApp
+          </a>
+        </li>
+
+        <li>
+          <a href="https://web.facebook.com/profile.php?id=61583404332951" target="_blank" class="facebook">
+            <i class="fab fa-facebook-f"></i> Facebook
+          </a>
+        </li>
+
+        <li>
+          <a href="https://www.instagram.com/construsanta00" target="_blank" class="instagram">
+            <i class="fab fa-instagram"></i> Instagram
+          </a>
+        </li>
+
+        <li>
+          <a href="mailto:contrusantander0@gmail.com" target="_blank" class="gmail">
+            <i class="fas fa-envelope"></i> Correo Electrónico
+          </a>
+        </li>
+
+      </ul>
     </li>
 
   </ul>
-</li>
-
-    </ul>
+</nav>
   </nav>
 </header>
 
@@ -290,6 +282,7 @@
   </script>
 </body>
 </html>
+
 
 
 
