--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
     <h2>¿QUIÉNES SOMOS?</h2>
     <p>
       <strong>INMOBILIARIA & CONSTRUCTORA J.S</strong> es una empresa con más de 10 años de experiencia dedicada a la compra y venta de lotes, construcción de viviendas y asesoría inmobiliaria personalizada.
-      Nos destacamos por ofrecer proyectos modernos, funcionales y adaptados a las necesidades de cada cliente. Nos destacamos por ofrecer proyectos de vivienda modernos, funcionales y adaptados a las necesidades de cada cliente, garantizando siempre calidad, confianza y cumplimiento en cada obra. 
-      Contamos con un equipo de profesionales comprometidos con hacer realidad tus sueños, brindando soluciones personalizadas desde el diseño hasta la entrega final. Nuestra prioridad es que cada cliente encuentre con nosotros una inversión segura y una experiencia de construcción transparente, honesta y satisfactoria.
+      Nos destacamos por ofrecer proyectos modernos, funcionales y adaptados a las necesidades de cada cliente.<P>Nos destacamos por ofrecer proyectos de vivienda modernos, funcionales y adaptados a las necesidades de cada cliente, garantizando siempre calidad, confianza y cumplimiento en cada obra. 
+      Contamos con un equipo de profesionales comprometidos con hacer realidad tus sueños, brindando soluciones personalizadas desde el diseño hasta la entrega final. Nuestra prioridad es que cada cliente encuentre con nosotros una inversión segura y una experiencia de construcción transparente, honesta y satisfactoria.</P> 
     </p>
   </div>
 </section>
@@ -108,10 +108,13 @@
   </div>
 </section>
 
-<!-- MODAL SERVICIOS -->
-<div id="modalServicios" class="modal">
-  <span class="cerrar" onclick="cerrarServicio()">&times;</span>
-  <div class="modal-contenido" id="contenidoServicio"></div>
+<!-- MODAL PARA SERVICIOS -->
+<div id="modalServicio" class="modal-servicio">
+  <div class="modal-servicio-contenido">
+    <span class="cerrar-servicio" onclick="cerrarServicio()">&times;</span>
+    <h2 id="tituloServicio"></h2>
+    <p id="textoServicio"></p>
+  </div>
 </div>
 
 <!-- PROYECTOS -->
@@ -207,4 +210,5 @@
 
 </body>
 </html>
+
 
