--- a/index.html
+++ b/index.html
@@ -21,8 +21,13 @@
   <img src="J.SS.jpg" alt="Logo Constructora J.S" class="logo">
   <h1>INMOBILIARIA & CONSTRUCTORA J.S</h1>
 
+  <!-- Botón hamburguesa -->
+  <div class="hamburguesa" id="btnMenu">
+    <i class="fa-solid fa-bars"></i>
+  </div>
+
   <nav>
-    <ul class="menu">
+    <ul class="menu" id="menu">
 
       <li class="dropdown">
         <a href="#inicio">Inicio</a>
@@ -209,6 +214,7 @@
 
 </body>
 </html>
+
 
 
 
