--- a/index.html
+++ b/index.html
@@ -13,79 +13,55 @@
 
 <header class="header">
   
-  <!-- Botón menú (hamburguesa) -->
-  <div class="hamburguesa" id="btnMenu">
-    <i class="fas fa-bars"></i>
-    <span>Menú</span>
+  <!-- Botón hamburguesa (solo móvil) -->
+  <div class="hamburguesa" id="btnMenuMovil">
+      <i class="fas fa-bars"></i>
   </div>
 
-  <!-- Logo centrado -->
-  <div class="header-logo">
-    <img src="J.SS.jpg" alt="Logo Constructora J.S" class="logo">
-    <h1>INMOBILIARIA & CONSTRUCTORA J.S</h1>
+  <!-- Branding centrado -->
+  <div class="header-brand">
+      <img src="J.SS.jpg" alt="Logo Constructora J.S">
+      <h1>INMOBILIARIA & CONSTRUCTORA J.S</h1>
   </div>
-
-  <!-- Menú móvil lateral -->
-  <nav class="menu-movil" id="menuMovil">
-    <a href="index.html">Inicio</a>
-
-    <p class="dropdown-movil">Servicios ▾</p>
-    <ul class="submenu">
-      <li><a href="#">Planos</a></li>
-      <li><a href="#">Construcción</a></li>
-      <li><a href="#">Arquitectura</a></li>
-    </ul>
-
-    <a href="#">Proyectos</a>
-    <a href="#">Contacto</a>
-  </nav>
 
   <!-- Menú escritorio -->
   <nav class="menu-desktop">
-    <ul class="menu" id="menu">
+      <ul>
+          <li><a href="#inicio">Inicio</a></li>
 
-      <li class="dropdown">
-        <a href="#inicio">Inicio</a>
-        <ul class="submenu">
-          <li><a href="#quienes">Quiénes somos</a></li>
-        </ul>
-      </li>
+          <li class="dropdown">
+              <a href="#servicios">Servicios</a>
+              <ul class="submenu">
+                  <li><a href="#venta">Venta de Casas y Lotes</a></li>
+                  <li><a href="#construccion">Construcción Personalizada</a></li>
+                  <li><a href="#diseno">Diseño Arquitectónico</a></li>
+                  <li><a href="#asesoria">Asesoría Inmobiliaria</a></li>
+              </ul>
+          </li>
 
-      <li class="dropdown">
-        <a href="#servicios">Servicios</a>
-        <ul class="submenu">
-          <li><a href="#venta">Venta de Casas y Lotes</a></li>
-          <li><a href="#construccion">Construcción Personalizada</a></li>
-          <li><a href="#diseno">Diseño Arquitectónico</a></li>
-          <li><a href="#asesoria">Asesoría Inmobiliaria</a></li>
-        </ul>
-      </li>
+          <li class="dropdown">
+              <a href="#proyectos">Proyectos</a>
+              <ul class="submenu">
+                  <li><a href="#esquinera">Casa Esquinera</a></li>
+                  <li><a href="#moderna">Casa Moderna</a></li>
+                  <li><a href="#jacuzzi">Casa con Jacuzzi</a></li>
+                  <li><a href="#personalizada">Casa Personalizada</a></li>
+              </ul>
+          </li>
 
-      <li class="dropdown">
-        <a href="#proyectos">Proyectos</a>
-        <ul class="submenu">
-          <li><a href="#esquinera">Casa Esquinera</a></li>
-          <li><a href="#moderna">Casa Moderna</a></li>
-          <li><a href="#jacuzzi">Casa con Jacuzzi</a></li>
-          <li><a href="#personalizada">Casa Personalizada</a></li>
-        </ul>
-      </li>
-
-      <li class="dropdown">
-        <a href="#contacto">Contacto</a>
-        <ul class="submenu">
-          <li><a href="https://wa.me/573167870085" target="_blank" class="whatsapp"><i class="fab fa-whatsapp"></i> WhatsApp</a></li>
-          <li><a href="https://web.facebook.com/profile.php?id=61583404332951" target="_blank" class="facebook"><i class="fab fa-facebook-f"></i> Facebook</a></li>
-          <li><a href="https://www.instagram.com/construsanta00" target="_blank" class="instagram"><i class="fab fa-instagram"></i> Instagram</a></li>
-          <li><a href="mailto:contrusantander0@gmail.com" class="gmail"><i class="fas fa-envelope"></i> Correo Electrónico</a></li>
-        </ul>
-      </li>
-
-    </ul>
+          <li class="dropdown">
+              <a href="#contacto">Contacto</a>
+              <ul class="submenu">
+                  <li><a href="https://wa.me/573167870085" target="_blank">WhatsApp</a></li>
+                  <li><a href="https://web.facebook.com/profile.php?id=61583404332951" target="_blank">Facebook</a></li>
+                  <li><a href="https://www.instagram.com/construsanta00" target="_blank">Instagram</a></li>
+                  <li><a href="mailto:contrusantander0@gmail.com">Correo</a></li>
+              </ul>
+          </li>
+      </ul>
   </nav>
 
 </header>
-
 <!-- QUIÉNES SOMOS -->
 <section id="inicio" class="hero">
   <div class="overlay">
@@ -230,6 +206,7 @@
 
 </body>
 </html>
+
 
 
 
